packages/html-reporter/src/imageDiffView.css
/*
  Copyright (c) Microsoft Corporation.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
*/

.image-diff-view .tabbed-pane .tab-content {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.image-diff-view .image-wrapper img {
  flex: auto;
  box-shadow: none;
  margin: 24px auto;
  min-width: 200px;
  max-width: 80%;
}

.image-diff-view .image-wrapper {
  flex: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.image-diff-view .image-wrapper div {
  flex: none;
  align-self: stretch;
  height: 2em;
  font-weight: 500;
  padding-top: 1em;
  display: flex;
  flex-direction: row;
}

